# sd-whatsapp-backend-mvp

./: .env.example  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/whatsapp/: __init__.py  config.py  database.py  main.py  redis.py
src/whatsapp/models/: __init__.py  chat.py  chat_member.py  inbox_entry.py  message.py  user.py
src/whatsapp/routers/: __init__.py  chats.py  inbox.py  messages.py  users.py  ws.py
src/whatsapp/schemas/: __init__.py  ack.py  chat.py  message.py  user.py
src/whatsapp/services/: __init__.py  chat_service.py  connection_manager.py  inbox_service.py  message_service.py  user_service.py
tests/: __init__.py  conftest.py
tests/functional/: test_chats.py  test_inbox.py  test_messages.py  test_websocket.py
tests/unit/: test_chat_service.py  test_healthz.py  test_inbox_service.py  test_message_service.py  test_user_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_send_message.py  test_fr2_inbox_sync.py  test_fr3_create_direct_chat.py  test_fr4_create_group_chat.py  test_fr5_delivery_ack.py  test_fr6_message_dedup.py  test_fr7_websocket_push.py  test_fr8_chat_history.py
