[project]
name = "whatsapp-mvp"
version = "0.1.0"
description = "WhatsApp MVP — messaging backend with REST + WebSocket"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "redis[hiredis]>=5.0,<6.0",
    "pydantic-settings>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"verify/acceptance/*" = [
    "E402",   # module level import not at top of file
    "E501",   # line too long
    "F541",   # f-string without placeholders
    "F841",   # local variable assigned but never used
    "UP041",  # use TimeoutError
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
